--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -1331,3 +1331,85 @@ type = {Conference Proceedings},
    year = {1997},
    type = {Journal Article}
 }
+@article{Canton2016,
+   author = {Canton, Jacopo and Örlü, Ramis and Chin, Cheng and Hutchins, Nicholas and Monty, Jason and Schlatter, Philipp},
+   title = {On Large-Scale Friction Control in Turbulent Wall Flow in Low Reynolds Number Channels},
+   journal = {Flow, Turbulence and Combustion},
+   volume = {97},
+   number = {3},
+   pages = {811-827},
+   ISSN = {1386-6184
+1573-1987},
+   DOI = {10.1007/s10494-016-9723-8},
+   year = {2016},
+   type = {Journal Article}
+}
+@article{Quadrio2009,
+   author = {Quadrio, Maurizio and Ricco, Pierre and Viotti, Claudio},
+   title = {Streamwise-travelling waves of spanwise wall velocity for turbulent drag reduction},
+   journal = {Journal of Fluid Mechanics},
+   volume = {627},
+   pages = {161},
+   ISSN = {0022-1120
+1469-7645},
+   DOI = {10.1017/s0022112009006077},
+   year = {2009},
+   type = {Journal Article}
+}
+@article{Gatti2013,
+   author = {Gatti, Davide and Quadrio, Maurizio},
+   title = {Performance losses of drag-reducing spanwise forcing at moderate values of the Reynolds number},
+   journal = {Physics of Fluids},
+   volume = {25},
+   number = {12},
+   pages = {125109},
+   ISSN = {1070-6631
+1089-7666},
+   DOI = {10.1063/1.4849537},
+   year = {2013},
+   type = {Journal Article}
+}
+@article{Gatti2016,
+   author = {Gatti, Davide and Quadrio, Maurizio},
+   title = {Reynolds-number dependence of turbulent skin-friction drag reduction induced by spanwise forcing},
+   journal = {Journal of Fluid Mechanics},
+   volume = {802},
+   pages = {553-582},
+   ISSN = {0022-1120
+1469-7645},
+   DOI = {10.1017/jfm.2016.485},
+   year = {2016},
+   type = {Journal Article}
+}
+@article{Jimenez1999,
+   author = {Jim\'enez, Javier and Pinelli, Alfredo},
+   title = {The autonomous cycle of near-wall turbulence},
+   journal = {Journal of Fluid Mechanics},
+   volume = {389},
+   pages = {335-359},
+   ISSN = {1469-7645},
+   year = {1999},
+   type = {Journal Article}
+}
+@article{del2006,
+   author = {Del \'Alamo, Juan C and Jim\'enez, Javier and Zandonade, Paulo and Moser, Robert D},
+   title = {Self-similar vortex clusters in the turbulent logarithmic region},
+   journal = {Journal of Fluid Mechanics},
+   volume = {561},
+   pages = {329-358},
+   ISSN = {1469-7645},
+   year = {2006},
+   type = {Journal Article}
+}
+@article{Jimenez2005,
+   author = {Jim\'enez, Javier and Kawahara, Genta and Simens, Mark P and Nagata, Masato and Shiba, Makoto},
+   title = {Characterization of near-wall turbulence in terms of equilibrium and “bursting” solutions},
+   journal = {Physics of Fluids},
+   volume = {17},
+   number = {1},
+   pages = {015105},
+   ISSN = {1070-6631},
+   url = {https://aip.scitation.org/doi/pdf/10.1063/1.1825451},
+   year = {2005},
+   type = {Journal Article}
+}
